--- a/dashboard.html
+++ b/dashboard.html
@@ -29,31 +29,36 @@
                     Box 1
                     <button id="button1">Open Image 1</button>
                     <button onclick="unlockBox('box1'); deleteRecordById(1)">Unlock Box 1</button>
+                    <img id="box-image-display-1" src="" alt="Image will appear here" style="display:none; width: 370px; height: 430px;"/>
                 </div>
                 <br>
                 <div style="text-align: center;">
                     Box 2
                     <button id="button2">Open Image 2</button>
                     <button onclick="unlockBox('box2'); deleteRecordById(2)">Unlock Box 2</button>
+                    <img id="box-image-display-2" src="" alt="Image will appear here" style="display:none; width: 370px; height: 430px;"/>
                 </div>
                 <br>
                 <div style="text-align: center;">
                     Box 3
                     <button id="button3">Open Image 3</button>
                     <button onclick="unlockBox('box3'); deleteRecordById(3)">Unlock Box 3</button>
+                    <img id="box-image-display-3" src="" alt="Image will appear here" style="display:none; width: 370px; height: 430px;"/>
                 </div>
                 <br>
                 <div style="text-align: center;">
                     Box 4
                     <button id="button4">Open Image 4</button>
                     <button onclick="unlockBox('box4'); deleteRecordById(4)">Unlock Box 4</button>
+                    <img id="box-image-display-4" src="" alt="Image will appear here" style="display:none; width: 370px; height: 430px;"/>
                 </div>
             </td>
             <td style="border: 1px solid black; padding-top: 10px; padding-bottom: 10px; margin-left: 10px;">
         <div style="text-align: center;">
             <button id="redirect-button">Redirect to Image</button>
             <button id="delete-button">Delete Image</button>
-            <p id="real-time-image-url"></p>
+            <!-- <p id="real-time-image-url"></p> -->
+            <img id="image-display" src="" alt="Image will appear here" style="display:none; width: 370px; height: 430px;"/>
         </div>
             </td>
         </tr>
